[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Plot results on linguistic trees and maps.
keywords =
    linguistics
    keyword2
long_description = file: README.md
long_description_content_type = text/markdown
name = lingtreemaps
project_urls =
    Bug Tracker = https://github.com/fmatter/lingtreemaps/issues
url = https://github.com/fmatter/lingtreemaps
version = 0.0.3.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    affine==2.3.1
    attrs==21.4.0
    biopython==1.79
    certifi==2022.6.15
    charset-normalizer==2.1.0
    click==8.1.3
    click-plugins==1.1.1
    cligj==0.7.2
    contextily==1.2.0
    colorlog
    cycler==0.11.0
    Fiona==1.8.21
    fonttools==4.34.4
    geographiclib==1.52
    geopandas==0.10.2
    geopy==2.2.0
    idna==3.3
    importlib-metadata==4.12.0
    importlib-resources==5.8.0
    joblib==1.1.0
    kiwisolver==1.4.3
    matplotlib==3.5.2
    mercantile==1.2.1
    munch==2.5.0
    numpy==1.21.6
    packaging==21.3
    pandas==1.3.5
    Pillow==9.2.0
    pyparsing==3.0.9
    pyproj==3.2.1
    python-dateutil==2.8.2
    pytz==2022.1
    pyyaml==6.0
    rasterio==1.3a3
    requests==2.28.1
    scipy==1.7.3
    seaborn==0.11.2
    Shapely==1.8.2
    six==1.16.0
    snuggs==1.4.7
    typing_extensions==4.3.0
    urllib3==1.26.10
    xyzservices==2022.6.0
    zipp==3.8.1

[options.entry_points]
console_scripts =
    lingtreemaps=lingtreemaps.cli:main


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.7
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
    twine
publishing =
    twine
    wheel

[options.packages.find]
include = lingtreemaps, lingtreemaps.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = lingtreemaps
src_paths = lingtreemaps,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    lingtreemaps

[coverage:report]
show_missing = true