[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Plot results on linguistic trees and maps.
keywords =
    linguistics
    keyword2
long_description = file: README.md
long_description_content_type = text/markdown
name = lingtreemaps
project_urls =
    Bug Tracker = https://github.com/fmatter/lingtreemaps/issues
url = https://github.com/fmatter/lingtreemaps
version = 0.0.4.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    pandas >= 1.3.5
    biopython >= 1.79
    colorlog >= 6.7.0
    contextily >= 1.2.0
    geopandas >= 0.10.2
    seaborn >= 0.12.0
    pyyaml >= 6.0
    importlib-resources >= 5.8.0

[options.entry_points]
console_scripts =
    lingtreemaps=lingtreemaps.cli:main


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.7
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
    twine
publishing =
    twine
    wheel

[options.packages.find]
include = lingtreemaps, lingtreemaps.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = lingtreemaps
src_paths = lingtreemaps,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    lingtreemaps

[coverage:report]
show_missing = true